mbiaj pt 2 post

--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,39 @@
     </aside>
 
     <section>
+      <h3>My Boss is a Jerk - pt. 2</h3>
+
+      <p class="disclosure">Disclosure, please read My Boss is a Jerk - series intro first.</p>
+
+      <p>I never get sick days. I’m literally in the office right now writing this blog but I don’t even care if my boss catches me. My head is fuzzy and spinning, I feel like I could lose my balance at any time, and he still made me come in today. I took a really hot shower to try and clear things up but there’s no way I can focus today.</p>
+
+      <p>As soon as I woke up I let him know that I wasn’t feeling well. What does he say back “Would you be able to come in and just take it easy? There’s a lot to do”. Is he implying that I’m not getting enough done, or falling behind, or something?</p>
+
+      <p>I never get sick days. #MyBossisaJerk</p>
+
+      <sub>posted 13 June 2016</sub>
+
+    </section>
+
+    <aside id="recent-posts">
+      <h3>Recent posts</h3>
+        <ul>
+          <li><a href="#">My Boss is a Jerk - pt. 2</a>
+          </li>
+          <li>I never get sick days. I’m literally in the office right now writing this blog but I don’t even care if my boss catches me. </li>
+            <sub>posted 13 June 2016</sub>
+          <li><a href="#">Ruby Gem Filetree Setup</a>
+          </li>
+          <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
+            <sub>posted 10 June 2016</sub>
+          <li><a href="#">My Boss is a Jerk - pt. 1</a>
+          </li>
+          <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
+            <sub>posted 16 May 2016</sub>
+        </ul>
+    </aside>
+
+    <section>
       <h3>Ruby Gem Filetree Setup</h3>
 
       <p>As I started to learn scraping, I actually found one of the hardest things to be the project set up. Requiring different things in different files, shell scripts, shebang statements, and all the other files that support your code but aren't widely talked about online. </p>
@@ -111,31 +144,13 @@
 
     </section>
 
-    <aside id="recent-posts">
-      <h3>Recent posts</h3>
-        <ul>
-          <li><a href="#">Ruby Gem Filetree Setup</a>
-          </li>
-          <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
-            <sub>posted 10 June 2016</sub>
-          <li><a href="#">My Boss is a Jerk - pt.1</a>
-          </li>
-          <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
-            <sub>posted 16 May 2016</sub>
-          <li><a href="#">My Boss is a Jerk - series intro</a>
-          </li>
-          <li>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</li>
-            <sub>posted 16 May 2016</sub>
-        </ul>
-    </aside>
-
     <aside id="twitter">
       <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </aside>
 
     <section>
-      <h3>My Boss is a Jerk - pt.1</h3>
+      <h3>My Boss is a Jerk - pt. 1</h3>
 
       <p class="disclosure">Disclosure, please read My Boss is a Jerk - series intro first.</p>
 
