--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
+          <li><a href="#">My Boss is a Jerk - pt. 2</a>
+          </li>
+          <li>I never get sick days. I’m literally in the office right now writing this blog but I don’t even care if my boss catches me. </li>
+            <sub>posted 13 June 2016</sub>
           <li><a href="#">Ruby Gem Filetree Setup</a>
           </li>
           <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
             <sub>posted 10 June 2016</sub>
-          <li><a href="#">My Boss is a Jerk - pt.1</a>
+          <li><a href="#">My Boss is a Jerk - pt. 1</a>
           </li>
           <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
-            <sub>posted 16 May 2016</sub>
-          <li><a href="#">My Boss is a Jerk - series intro</a>
-          </li>
-          <li>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</li>
             <sub>posted 16 May 2016</sub>
         </ul>
     </aside>
