quick blog content edit

--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
 
       <p class="disclosure">Disclosure, please read My Boss is a Jerk - series intro first.</p>
 
-      <p>I never get sick days. I’m literally in the office right now writing this blog but I don’t even care if my boss catches me. My head is fuzzy and spinning, I feel like I could lose my balance at any time, and he still made me come in today. I took a really hot shower to try and clear things up but there’s no way I can focus today.</p>
+      <p>I never get sick days. I’m literally in the office right now writing this blog and I don’t even care if my boss catches me. My head is fuzzy and spinning, I feel like I could lose my balance at any time, and he still made me come in today. I took a really hot shower to try and clear things up but there’s no way I can focus today.</p>
 
       <p>As soon as I woke up I let him know that I wasn’t feeling well. What does he say back “Would you be able to come in and just take it easy? There’s a lot to do”. Is he implying that I’m not getting enough done, or falling behind, or something?</p>
 
@@ -64,7 +64,7 @@
         <ul>
           <li><a href="#">My Boss is a Jerk - pt. 2</a>
           </li>
-          <li>I never get sick days. I’m literally in the office right now writing this blog but I don’t even care if my boss catches me. </li>
+          <li>I never get sick days. I’m literally in the office right now writing this blog abd I don’t even care if my boss catches me. </li>
             <sub>posted 13 June 2016</sub>
           <li><a href="#">Ruby Gem Filetree Setup</a>
           </li>
