--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul>
           <li><a href="#">My Boss is a Jerk - pt. 2</a>
           </li>
-          <li>I never get sick days. I’m literally in the office right now writing this blog but I don’t even care if my boss catches me. </li>
+          <li>I never get sick days. I’m literally in the office right now writing this blog and I don’t even care if my boss catches me. </li>
             <sub>posted 13 June 2016</sub>
           <li><a href="#">Ruby Gem Filetree Setup</a>
           </li>
