post ready, finishing first gem

--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,36 @@
     </aside>
 
     <section>
+      <h3>Finishing my first gem</h3>
+
+      <p>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. It can also tell you some weather information for the coming days. It scrapes from weather.gov.</p>
+
+      <p>The best part actually came on Friday (three days ago), when I finished writing the command line portion of the program so that you can actually experience what it does. When I could type in any zip code I wanted and it would output the town/city’s name, I was a little impressed with myself. When you type in the zip it interpolates that into the url and then scrapes from that weather.gov url. It takes the weather and temp (among other things) from that url; this was the first program I had written by myself that had a massive amount of outputs, and I hadn’t even defined the outputs.</p>
+
+      <p>The next feeling of accomplishment came today when I put the finishing touches on and wrote this blog. Looking back over the past year, I’ve come a long way from just knowing basic html/css, to building my own computer, to starting slowly on codeacademy, to jumping all in and applying to The Flatiron School.</p>
+
+      <sub>posted 13 June 2016</sub>
+    </section>
+
+    <aside id="recent-posts">
+      <h3>Recent posts</h3>
+        <ul>
+          <li><a href="#">Finishing my first gem</a>
+          </li>
+          <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
+            <sub>posted 13 June 2016</sub>
+          <li><a href="#">My Boss is a Jerk - pt. 2</a>
+          </li>
+          <li>I never get sick days. I’m literally in the office right now writing this blog abd I don’t even care if my boss catches me. </li>
+            <sub>posted 13 June 2016</sub>
+          <li><a href="#">Ruby Gem Filetree Setup</a>
+          </li>
+          <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
+            <sub>posted 10 June 2016</sub>
+        </ul>
+    </aside>
+
+    <section>
       <h3>My Boss is a Jerk - pt. 2</h3>
 
       <p class="disclosure">Disclosure, please read My Boss is a Jerk - series intro first.</p>
@@ -56,25 +86,11 @@
       <p>I never get sick days. #MyBossisaJerk</p>
 
       <sub>posted 13 June 2016</sub>
-
     </section>
 
-    <aside id="recent-posts">
-      <h3>Recent posts</h3>
-        <ul>
-          <li><a href="#">My Boss is a Jerk - pt. 2</a>
-          </li>
-          <li>I never get sick days. I’m literally in the office right now writing this blog abd I don’t even care if my boss catches me. </li>
-            <sub>posted 13 June 2016</sub>
-          <li><a href="#">Ruby Gem Filetree Setup</a>
-          </li>
-          <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
-            <sub>posted 10 June 2016</sub>
-          <li><a href="#">My Boss is a Jerk - pt. 1</a>
-          </li>
-          <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
-            <sub>posted 16 May 2016</sub>
-        </ul>
+    <aside id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </aside>
 
     <section>
@@ -143,11 +159,6 @@
       <sub>posted 10 June 2016</sub>
 
     </section>
-
-    <aside id="twitter">
-      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </aside>
 
     <section>
       <h3>My Boss is a Jerk - pt. 1</h3>
