--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
+          <li><a href="#">Finishing my first gem</a>
+          </li>
+          <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
+            <sub>posted 13 June 2016</sub>
           <li><a href="#">My Boss is a Jerk - pt. 2</a>
           </li>
           <li>I never get sick days. I’m literally in the office right now writing this blog and I don’t even care if my boss catches me. </li>
@@ -74,10 +78,6 @@
           </li>
           <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
             <sub>posted 10 June 2016</sub>
-          <li><a href="#">My Boss is a Jerk - pt. 1</a>
-          </li>
-          <li>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</li>
-            <sub>posted 16 May 2016</sub>
         </ul>
     </aside>
 
