removed bad posts

--- a/blog.html
+++ b/blog.html
@@ -63,34 +63,15 @@
           </li>
           <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
             <sub>posted 13 June 2016</sub>
-          <li><a href="#">My Boss is a Jerk - pt. 2</a>
-          </li>
-          <li>I never get sick days. I’m literally in the office right now writing this blog abd I don’t even care if my boss catches me. </li>
-            <sub>posted 13 June 2016</sub>
           <li><a href="#">Ruby Gem Filetree Setup</a>
           </li>
           <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
             <sub>posted 10 June 2016</sub>
+          <li><a href="#">Why did I decide to learn software development?</a>
+          </li>
+          <li>In short... because I tried some other things and enjoyed this the most I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
+            <sub>posted 12 May 2016</sub>
         </ul>
-    </aside>
-
-    <section>
-      <h3>My Boss is a Jerk - pt. 2</h3>
-
-      <p class="disclosure">Disclosure, please read My Boss is a Jerk - series intro first.</p>
-
-      <p>I never get sick days. I’m literally in the office right now writing this blog and I don’t even care if my boss catches me. My head is fuzzy and spinning, I feel like I could lose my balance at any time, and he still made me come in today. I took a really hot shower to try and clear things up but there’s no way I can focus today.</p>
-
-      <p>As soon as I woke up I let him know that I wasn’t feeling well. What does he say back “Would you be able to come in and just take it easy? There’s a lot to do”. Is he implying that I’m not getting enough done, or falling behind, or something?</p>
-
-      <p>I never get sick days. #MyBossisaJerk</p>
-
-      <sub>posted 13 June 2016</sub>
-    </section>
-
-    <aside id="twitter">
-      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </aside>
 
     <section>
@@ -160,33 +141,10 @@
 
     </section>
 
-    <section>
-      <h3>My Boss is a Jerk - pt. 1</h3>
-
-      <p class="disclosure">Disclosure, please read My Boss is a Jerk - series intro first.</p>
-
-      <p>He’s never happy. It’s like he’s watching over my shoulder and knows my exact productivity and precisely how much time I've spent in the office.</p>
-
-      <p>The day’s objectives are just so undefined; whether he feels satisfied with the amount of work I get done or not, is completely arbitrary. If I spend even 15 minutes less than a normal eight hour day in the office, then he stresses out and I can just tell that it nags him for the entire evening. He always makes these unnecessary remarks just as I’m leaving the office for the day. How is that supposed to motivate me?</p>
-
-      <p>He’s never happy. #MyBossisaJerk</p>
-
-      <sub>posted 16 May 2016</sub>
-
-    </section>
-
-    <section>
-      <h3>My Boss is a Jerk - series intro</h3>
-
-      <p>Welcome to the ‘My Boss is a Jerk’ series. I will be chronicling my exploits of self employment and working from home.</p>
-
-      <p>To be honest I’m not self employed yet, but hope to be (at least partially with my own side project) in about three months time. I am taking a self-paced online webdev class until then; so there will be similarities as I motivate myself and manage my own time.</p>
-
-      <p>Welcome to the ‘My Boss is a Jerk’ series. #MyBossisaJerk</p>
-
-      <sub>posted 16 May 2016</sub>
-
-    </section>
+    <aside id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </aside>
 
     <section>
       <h3>Why did I decide to learn software development?</h3>
