--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           </li>
           <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
             <sub>posted 13 June 2016</sub>
-          <li><a href="#">My Boss is a Jerk - pt. 2</a>
-          </li>
-          <li>I never get sick days. I’m literally in the office right now writing this blog and I don’t even care if my boss catches me. </li>
-            <sub>posted 13 June 2016</sub>
           <li><a href="#">Ruby Gem Filetree Setup</a>
           </li>
           <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
             <sub>posted 10 June 2016</sub>
+          <li><a href="#">Why did I decide to learn software development?</a>
+          </li>
+          <li>In short... because I tried some other things and enjoyed this the most I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
+            <sub>posted 12 May 2016</sub>
         </ul>
     </aside>
 
