--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     <aside id="recent-posts">
       <h3>Recent posts</h3>
         <ul>
+          <li><a href="#">Learning sql just takes persistence</a>
+          </li>
+          <li>At first, sql was an easy language to pick up. It was pretty basic, just creating tables, inserting into them, selecting from them, altering them… </li>
+            <sub>posted 22 June 2016</sub>
           <li><a href="#">Finishing my first gem</a>
           </li>
           <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
@@ -74,10 +78,6 @@
           </li>
           <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
             <sub>posted 10 June 2016</sub>
-          <li><a href="#">Why did I decide to learn software development?</a>
-          </li>
-          <li>In short... because I tried some other things and enjoyed this the most I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
-            <sub>posted 12 May 2016</sub>
         </ul>
     </aside>
 
