--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,57 @@
     </aside>
 
     <section>
+      <h3>Learning sql just takes persistence</h3>
+
+      <p>At first, sql was an easy language to pick up. It was pretty basic, just creating tables, inserting into them, selecting from them, altering them… Things were great, now my programs could persist data. Then it was time to starting joining and all of the sudden things were not great, things were bad. I spent the next two to three hours very frustrated that I couldn’t grasp this concept.</p>
+
+      <p>After reading practically every stack exchange question on sqlite joining I figured out a way to understand it that works for me. Looking back it seems easy now but it just didn’t click until I thought of the statement with a new comma placement. At first I was reading:</p>
+      
+      <ul>
+        <li class="select_statement">SELECT * FROM table1, </li>
+        <li class="select_statement">INNER JOIN table2, </li>
+        <li class="select_statement">ON table1_column = table2_column;</li>
+      </ul>
+      
+      <p>Then I started to realize that it helps to read it like:</p>
+
+      <ul>
+        <li class="select_statement">SELECT * ,</li> 
+        <li class="select_statement">FROM table1 INNER JOIN table2, </li>
+        <li class="select_statement">ON table1_column = table2_column;</li>
+      </ul>
+
+      <p>So now things were great again, we even started learning how to link our sql database with our ruby code. This was really neat until we started to build abstract and dynamic super classes that would work (build tables and such) for any child class. Things were again bad.</p>
+
+      <p>The trouble I was having this time was with interpolating method names into the sql string. Sometimes I found I could just interpolate in the standard fashion, other times I found I would need to interpolate and put it in "quotes" and ‘single quotes’, or any combination of the three. My friends, I wish I could tell you I figured this one out but alas this is why I say learning sql just takes persistence.</p>
+
+      <sub>posted 22 June 2016</sub>
+    </section>
+
+    <aside id="recent-posts">
+      <h3>Recent posts</h3>
+        <ul>
+          <li><a href="#">Learning sql just takes persistence</a>
+          </li>
+          <li>At first, sql was an easy language to pick up. It was pretty basic, just creating tables, inserting into them, selecting from them, altering them… </li>
+            <sub>posted 22 June 2016</sub>
+          <li><a href="#">Finishing my first gem</a>
+          </li>
+          <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
+            <sub>posted 13 June 2016</sub>
+          <li><a href="#">Ruby Gem Filetree Setup</a>
+          </li>
+          <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
+            <sub>posted 10 June 2016</sub>
+        </ul>
+    </aside>
+
+    <aside id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </aside>
+
+    <section>
       <h3>Finishing my first gem</h3>
 
       <p>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. It can also tell you some weather information for the coming days. It scrapes from weather.gov.</p>
@@ -56,28 +107,10 @@
       <sub>posted 13 June 2016</sub>
     </section>
 
-    <aside id="recent-posts">
-      <h3>Recent posts</h3>
-        <ul>
-          <li><a href="#">Finishing my first gem</a>
-          </li>
-          <li>I literally just finished my first gem and it is a really awesome feeling. I coded a program that can output the weather for any zip code in the US. </li>
-            <sub>posted 13 June 2016</sub>
-          <li><a href="#">Ruby Gem Filetree Setup</a>
-          </li>
-          <li>As I started to learn scraping, I actually found one of the hardest things to be the project set up. </li>
-            <sub>posted 10 June 2016</sub>
-          <li><a href="#">Why did I decide to learn software development?</a>
-          </li>
-          <li>In short... because I tried some other things and enjoyed this the most I wasn’t being challenged at my last position, so I decided to start figuring out what I wanted to do.</li>
-            <sub>posted 12 May 2016</sub>
-        </ul>
-    </aside>
-
     <section>
       <h3>Ruby Gem Filetree Setup</h3>
 
-      <p>As I started to learn scraping, I actually found one of the hardest things to be the project set up. Requiring different things in different files, shell scripts, shebang statements, and all the other files that support your code but aren't widely talked about online. </p>
+      <p>As I started to learn scraping, I actually found one of the hardest things to be the project set up and packaging the project as a gem. Requiring different things in different files, shell scripts, shebang statements, and all the other files that support your code but aren't widely talked about online. </p>
 
       <p>After searching the web, I found no filetrees that also had descriptions of what the file did and what content to include. So I thought I would build a list of everything that goes in your root directory for a ruby project. I hope you like it.</p>
 
@@ -85,7 +118,7 @@
 
       <ul>
         <li class="indent_0">root directory - holds all files and folders (folders end in a backslash below)</li>
-          <li class="indent_1">bin/ - this folder generally only holds executable files</li>
+          <li class="indent_1">bin/ - this folder generally only holds executable files (make files executable by running chmod in your command line, ls -l should then show x's if successful</li>
             <li class="indent_2">runner - sometimes also named after the project</li>
               <li class="indent_3">this is where you actually call the classes/methods to run your program</li>
               <li class="indent_3">make sure to include require “environment”</li>
@@ -116,6 +149,9 @@
           <li class="indent_1">.gitignore - tells git which files to ignore during commits, github has samples you can borrow</li>
           <li class="indent_1">.rspec</li>
           <li class="indent_1">root.gemspec</li>
+          <li class="indent_2">here you list attributes about your gem</li>
+          <li class="indent_3">make sure to list all your files using `git ls-files`.split($\)</li>
+          <li class="indent_3">also make sure to list just your runner file as an executable</li>
       </ul>
 
       <ul class="sources">
@@ -140,11 +176,6 @@
       <sub>posted 10 June 2016</sub>
 
     </section>
-
-    <aside id="twitter">
-      <a class="twitter-timeline" href="https://twitter.com/sregorsemaj" data-widget-id="732700314827149312">Tweets by @sregorsemaj</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </aside>
 
     <section>
       <h3>Why did I decide to learn software development?</h3>
