fixed rakefile definition in post, unsuccessfully attempted to center navbar links

--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         <img src="./images/profile.jpg">
       </div> <!--profile-->
       <nav>
-        <div id="navbar">
-          <ul>
-            <li><a href="#" id="blog">Blog</a></li>
-            <li><a href="#">Resumé</a></li>
-          </ul>
-        </div><!--navbar-->
+        <ul>
+          <li><a href="./index.html" id="blog">Blog</a></li>
+          <li><a href="#">Resumé</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -157,7 +155,7 @@
           <li class="indent_1">readme.md - an explanation of what your program is used for and how to use it</li>
           <li class="indent_1">license.md - copyright mumbo jumbo</li>
             <li class="indent_2">it is conventional to borrow a stock license provided by github</li>
-          <li class="indent_1">rakefile - think of this as the runner file for your tests</li>
+          <li class="indent_1">rakefile - automates a lot of the build process for you</li>
           <li class="indent_1">contributing.md - info on editing open source software, such as format and test fixes</li>
           <li class="indent_1">.gitignore - tells git which files to ignore during commits, github has samples you can borrow</li>
           <li class="indent_1">.rspec</li>
@@ -168,22 +166,22 @@
       </ul>
 
       <ul class="sources">
-      <li class="sources_title">my sources</li>
-      <li>instructors at The Flatiron School</li>
-      <li>http://learnrubythehardway.org/book/ex46.html</li>
-      <li>https://www.ruby-forum.com/topic/213637</li>
-      <li>https://github.com/blog/1184-contributing-guidelines</li>
-      <li>http://guides.rubyonrails.org/initialization.html</li>
-      <li>http://guides.rubyonrails.org/command_line.html</li>
-      </br>
-      <li class="sources_title">additional resources</li>
-      <li>http://stackoverflow.com/questions/9549450/how-to-setup-a-basic-ruby-project</li>
-      <li>http://howistart.org/posts/ruby/1</li>
-      <li>http://bundler.io/v1.11/bundler_setup.html</li>
-      <li>https://sipb.mit.edu/doc/safe-shell/</li>
-      <li>https://quickleft.com/blog/engineering-lunch-series-step-by-step-guide-to-building-your-first-ruby-gem/</li>
-      <li>http://stackoverflow.com/questions/4128235/what-is-the-exact-meaning-of-ifs-n</li>
-      <li>http://stackoverflow.com/questions/13872048/bash-script-what-does-bin-bash-mean</li>
+        <li class="sources_title">my sources</li>
+        <li>instructors at The Flatiron School</li>
+        <li>http://learnrubythehardway.org/book/ex46.html</li>
+        <li>https://www.ruby-forum.com/topic/213637</li>
+        <li>https://github.com/blog/1184-contributing-guidelines</li>
+        <li>http://guides.rubyonrails.org/initialization.html</li>
+        <li>http://guides.rubyonrails.org/command_line.html</li>
+        </br>
+        <li class="sources_title">additional resources</li>
+        <li>http://stackoverflow.com/questions/9549450/how-to-setup-a-basic-ruby-project</li>
+        <li>http://howistart.org/posts/ruby/1</li>
+        <li>http://bundler.io/v1.11/bundler_setup.html</li>
+        <li>https://sipb.mit.edu/doc/safe-shell/</li>
+        <li>https://quickleft.com/blog/engineering-lunch-series-step-by-step-guide-to-building-your-first-ruby-gem/</li>
+        <li>http://stackoverflow.com/questions/4128235/what-is-the-exact-meaning-of-ifs-n</li>
+        <li>http://stackoverflow.com/questions/13872048/bash-script-what-does-bin-bash-mean</li>
       </ul>
 
       <sub>posted 10 June 2016</sub>
