--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
         <img src="./images/profile.jpg">
       </div> <!--profile-->
       <nav>
-        <ul>
-          <li><a href="./index.html" id="blog">Blog</a></li>
-          <li><a href="#">Resumé</a></li>
-        </ul>
+          <a href="./index.html" id="blog">Blog</a>
+          <a href="#">Resumé</a>
       </nav>
     </header>
 
